// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pivotScatter 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    [
      {
        "__Dim_ColorId__": "1-2019-A",
        "__Dim_Color__": "1-2019-A",
        "__Dim_Detail__": "1-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "A",
        },
        "date": "2019",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2-2019-A",
        "__Dim_Color__": "2-2019-A",
        "__Dim_Detail__": "2-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2019",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "A",
        },
        "date": "2019",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "3-2019-A",
        "__Dim_Color__": "3-2019-A",
        "__Dim_Detail__": "3-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2019",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "A",
        },
        "date": "2019",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "4-2019-A",
        "__Dim_Color__": "4-2019-A",
        "__Dim_Detail__": "4-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2019",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "A",
        },
        "date": "2019",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "5-2019-A",
        "__Dim_Color__": "5-2019-A",
        "__Dim_Detail__": "5-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2019",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "A",
        },
        "date": "2019",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "6-2019-A",
        "__Dim_Color__": "6-2019-A",
        "__Dim_Detail__": "6-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "A",
        },
        "date": "2019",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "1-2019-B",
        "__Dim_Color__": "1-2019-B",
        "__Dim_Detail__": "1-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "B",
        },
        "date": "2019",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "2-2019-B",
        "__Dim_Color__": "2-2019-B",
        "__Dim_Detail__": "2-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2019",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "B",
        },
        "date": "2019",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "3-2019-B",
        "__Dim_Color__": "3-2019-B",
        "__Dim_Detail__": "3-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2019",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "B",
        },
        "date": "2019",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "4-2019-B",
        "__Dim_Color__": "4-2019-B",
        "__Dim_Detail__": "4-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2019",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "B",
        },
        "date": "2019",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "5-2019-B",
        "__Dim_Color__": "5-2019-B",
        "__Dim_Detail__": "5-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2019",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "B",
        },
        "date": "2019",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "6-2019-B",
        "__Dim_Color__": "6-2019-B",
        "__Dim_Detail__": "6-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "B",
        },
        "date": "2019",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "1-2020-A",
        "__Dim_Color__": "1-2020-A",
        "__Dim_Detail__": "1-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "A",
        },
        "date": "2020",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2-2020-A",
        "__Dim_Color__": "2-2020-A",
        "__Dim_Detail__": "2-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2020",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "A",
        },
        "date": "2020",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "3-2020-A",
        "__Dim_Color__": "3-2020-A",
        "__Dim_Detail__": "3-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2020",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "A",
        },
        "date": "2020",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "4-2020-A",
        "__Dim_Color__": "4-2020-A",
        "__Dim_Detail__": "4-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2020",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "A",
        },
        "date": "2020",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "5-2020-A",
        "__Dim_Color__": "5-2020-A",
        "__Dim_Detail__": "5-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2020",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "A",
        },
        "date": "2020",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "6-2020-A",
        "__Dim_Color__": "6-2020-A",
        "__Dim_Detail__": "6-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "A",
        },
        "date": "2020",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "1-2020-B",
        "__Dim_Color__": "1-2020-B",
        "__Dim_Detail__": "1-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "B",
        },
        "date": "2020",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "2-2020-B",
        "__Dim_Color__": "2-2020-B",
        "__Dim_Detail__": "2-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2020",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "B",
        },
        "date": "2020",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "3-2020-B",
        "__Dim_Color__": "3-2020-B",
        "__Dim_Detail__": "3-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2020",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "B",
        },
        "date": "2020",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "4-2020-B",
        "__Dim_Color__": "4-2020-B",
        "__Dim_Detail__": "4-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2020",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "B",
        },
        "date": "2020",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "5-2020-B",
        "__Dim_Color__": "5-2020-B",
        "__Dim_Detail__": "5-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2020",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "B",
        },
        "date": "2020",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "6-2020-B",
        "__Dim_Color__": "6-2020-B",
        "__Dim_Detail__": "6-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "B",
        },
        "date": "2020",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "B",
      },
    ],
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          200000,
          1000000,
        ],
        "measureValue": "__MeaXValue__0",
      },
      "foldInfoList": [
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "sales": "销售额",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            200000,
            1000000,
          ],
          "measureValue": "__MeaXValue__0",
        },
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "profit": "利润",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            10000,
            50000,
          ],
          "measureValue": "__MeaYValue__0",
        },
      ],
      "id": "scatter-0",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "1-2019-A": "1-2019-A",
          "1-2019-B": "1-2019-B",
          "1-2020-A": "1-2020-A",
          "1-2020-B": "1-2020-B",
          "2-2019-A": "2-2019-A",
          "2-2019-B": "2-2019-B",
          "2-2020-A": "2-2020-A",
          "2-2020-B": "2-2020-B",
          "3-2019-A": "3-2019-A",
          "3-2019-B": "3-2019-B",
          "3-2020-A": "3-2020-A",
          "3-2020-B": "3-2020-B",
          "4-2019-A": "4-2019-A",
          "4-2019-B": "4-2019-B",
          "4-2020-A": "4-2020-A",
          "4-2020-B": "4-2020-B",
          "5-2019-A": "5-2019-A",
          "5-2019-B": "5-2019-B",
          "5-2020-A": "5-2020-A",
          "5-2020-B": "5-2020-B",
          "6-2019-A": "6-2019-A",
          "6-2019-B": "6-2019-B",
          "6-2020-A": "6-2020-A",
          "6-2020-B": "6-2020-B",
        },
        "colorItems": [
          "1-2019-A",
          "2-2019-A",
          "3-2019-A",
          "4-2019-A",
          "5-2019-A",
          "6-2019-A",
          "1-2019-B",
          "2-2019-B",
          "3-2019-B",
          "4-2019-B",
          "5-2019-B",
          "6-2019-B",
          "1-2020-A",
          "2-2020-A",
          "3-2020-A",
          "4-2020-A",
          "5-2020-A",
          "6-2020-A",
          "1-2020-B",
          "2-2020-B",
          "3-2020-B",
          "4-2020-B",
          "5-2020-B",
          "6-2020-B",
          "1-2019-A",
          "2-2019-A",
          "3-2019-A",
          "4-2019-A",
          "5-2019-A",
          "6-2019-A",
          "1-2019-B",
          "2-2019-B",
          "3-2019-B",
          "4-2019-B",
          "5-2019-B",
          "6-2019-B",
          "1-2020-A",
          "2-2020-A",
          "3-2020-A",
          "4-2020-A",
          "5-2020-A",
          "6-2020-A",
          "1-2020-B",
          "2-2020-B",
          "3-2020-B",
          "4-2020-B",
          "5-2020-B",
          "6-2020-B",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "月",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "年",
      "id": "date",
      "location": "columnDimension",
    },
    {
      "alias": "类型",
      "id": "type",
      "location": "rowDimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "month",
      "date",
      "type",
    ],
    "column": [],
    "detail": [
      "month",
      "date",
      "type",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "sales",
      "profit",
    ],
    "y": [
      "sales",
      "profit",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "children": [
        {
          "alias": "销售额",
          "format": {
            "decimalPlaces": 0,
            "prefix": "利润",
            "ratio": 1000,
            "suffix": "$",
            "symbol": "千",
            "thousandSeparator": true,
            "type": "number",
          },
          "id": "sales",
        },
      ],
      "id": "line1",
    },
    {
      "children": [
        {
          "alias": "利润",
          "autoFormat": true,
          "format": {
            "decimalPlaces": 0,
            "prefix": "利润",
            "ratio": 1000,
            "suffix": "$",
            "symbol": "千",
            "thousandSeparator": true,
            "type": "number",
          },
          "id": "profit",
        },
      ],
      "id": "line2",
    },
  ],
}
`;

exports[`pivotScatter 2`] = `
{
  "animation": true,
  "columns": [
    {
      "dimensionKey": "date",
      "title": "年",
    },
  ],
  "heightMode": "adaptive",
  "indicators": [
    {
      "cellType": "chart",
      "chartModule": "vchart",
      "chartSpec": {
        "animation": true,
        "axes": [
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "right": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "bottom",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "top": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "left",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
        ],
        "background": "transparent",
        "color": {
          "domain": [
            "1-2019-A",
            "2-2019-A",
            "3-2019-A",
            "4-2019-A",
            "5-2019-A",
            "6-2019-A",
            "1-2019-B",
            "2-2019-B",
            "3-2019-B",
            "4-2019-B",
            "5-2019-B",
            "6-2019-B",
            "1-2020-A",
            "2-2020-A",
            "3-2020-A",
            "4-2020-A",
            "5-2020-A",
            "6-2020-A",
            "1-2020-B",
            "2-2020-B",
            "3-2020-B",
            "4-2020-B",
            "5-2020-B",
            "6-2020-B",
          ],
          "range": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "specified": undefined,
          "type": "ordinal",
        },
        "crosshair": {
          "xField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
          "yField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
        },
        "data": {
          "fields": {},
          "id": "scatter-0",
          "values": undefined,
        },
        "direction": "vertical",
        "label": {
          "formatMethod": [Function],
          "visible": true,
        },
        "padding": 0,
        "point": {
          "state": {
            "hover": {
              "fillOpacity": 0.6,
              "lineWidth": 1,
              "scaleX": 1.4,
              "scaleY": 1.4,
              "stroke": [Function],
            },
          },
          "style": {},
        },
        "region": [
          {
            "clip": true,
          },
        ],
        "seriesField": "__Dim_ColorId__",
        "tooltip": {
          "dimension": {
            "content": [
              {
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
            ],
          },
          "mark": {
            "content": [
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "value": [Function],
                "visible": true,
              },
            ],
            "title": {
              "visible": true,
            },
          },
          "visible": true,
        },
        "type": "scatter",
        "xField": "__MeaXValue__0",
        "yField": "__MeaYValue__0",
      },
      "indicatorKey": "scatter-0",
      "style": {
        "padding": [
          1,
          1,
          0,
          1,
        ],
      },
      "title": undefined,
    },
  ],
  "indicatorsAsCol": false,
  "legends": {
    "data": [
      {
        "label": "1-2019-A",
        "shape": {
          "fill": "#8D72F6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#8D72F6",
          },
        },
      },
      {
        "label": "2-2019-A",
        "shape": {
          "fill": "#5766EC",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#5766EC",
          },
        },
      },
      {
        "label": "3-2019-A",
        "shape": {
          "fill": "#66A3FE",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#66A3FE",
          },
        },
      },
      {
        "label": "4-2019-A",
        "shape": {
          "fill": "#51D5E6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#51D5E6",
          },
        },
      },
      {
        "label": "5-2019-A",
        "shape": {
          "fill": "#4EC0B3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#4EC0B3",
          },
        },
      },
      {
        "label": "6-2019-A",
        "shape": {
          "fill": "#F9DF90",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#F9DF90",
          },
        },
      },
      {
        "label": "1-2019-B",
        "shape": {
          "fill": "#F9AD71",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#F9AD71",
          },
        },
      },
      {
        "label": "2-2019-B",
        "shape": {
          "fill": "#ED8888",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#ED8888",
          },
        },
      },
      {
        "label": "3-2019-B",
        "shape": {
          "fill": "#E9A0C3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#E9A0C3",
          },
        },
      },
      {
        "label": "4-2019-B",
        "shape": {
          "fill": "#D77DD3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#D77DD3",
          },
        },
      },
      {
        "label": "5-2019-B",
        "shape": {
          "fill": "#8D72F6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#8D72F6",
          },
        },
      },
      {
        "label": "6-2019-B",
        "shape": {
          "fill": "#5766EC",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#5766EC",
          },
        },
      },
      {
        "label": "1-2020-A",
        "shape": {
          "fill": "#66A3FE",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#66A3FE",
          },
        },
      },
      {
        "label": "2-2020-A",
        "shape": {
          "fill": "#51D5E6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#51D5E6",
          },
        },
      },
      {
        "label": "3-2020-A",
        "shape": {
          "fill": "#4EC0B3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#4EC0B3",
          },
        },
      },
      {
        "label": "4-2020-A",
        "shape": {
          "fill": "#F9DF90",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#F9DF90",
          },
        },
      },
      {
        "label": "5-2020-A",
        "shape": {
          "fill": "#F9AD71",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#F9AD71",
          },
        },
      },
      {
        "label": "6-2020-A",
        "shape": {
          "fill": "#ED8888",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#ED8888",
          },
        },
      },
      {
        "label": "1-2020-B",
        "shape": {
          "fill": "#E9A0C3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#E9A0C3",
          },
        },
      },
      {
        "label": "2-2020-B",
        "shape": {
          "fill": "#D77DD3",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#D77DD3",
          },
        },
      },
      {
        "label": "3-2020-B",
        "shape": {
          "fill": "#8D72F6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#8D72F6",
          },
        },
      },
      {
        "label": "4-2020-B",
        "shape": {
          "fill": "#5766EC",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#5766EC",
          },
        },
      },
      {
        "label": "5-2020-B",
        "shape": {
          "fill": "#66A3FE",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#66A3FE",
          },
        },
      },
      {
        "label": "6-2020-B",
        "shape": {
          "fill": "#51D5E6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#51D5E6",
          },
        },
      },
    ],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "records": {
    "scatter-0": [
      {
        "__Dim_ColorId__": "1-2019-A",
        "__Dim_Color__": "1-2019-A",
        "__Dim_Detail__": "1-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "A",
        },
        "date": "2019",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2-2019-A",
        "__Dim_Color__": "2-2019-A",
        "__Dim_Detail__": "2-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2019",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "A",
        },
        "date": "2019",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "3-2019-A",
        "__Dim_Color__": "3-2019-A",
        "__Dim_Detail__": "3-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2019",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "A",
        },
        "date": "2019",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "4-2019-A",
        "__Dim_Color__": "4-2019-A",
        "__Dim_Detail__": "4-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2019",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "A",
        },
        "date": "2019",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "5-2019-A",
        "__Dim_Color__": "5-2019-A",
        "__Dim_Detail__": "5-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2019",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "A",
        },
        "date": "2019",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "6-2019-A",
        "__Dim_Color__": "6-2019-A",
        "__Dim_Detail__": "6-2019-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "A",
        },
        "date": "2019",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "1-2019-B",
        "__Dim_Color__": "1-2019-B",
        "__Dim_Detail__": "1-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "B",
        },
        "date": "2019",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "2-2019-B",
        "__Dim_Color__": "2-2019-B",
        "__Dim_Detail__": "2-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2019",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "B",
        },
        "date": "2019",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "3-2019-B",
        "__Dim_Color__": "3-2019-B",
        "__Dim_Detail__": "3-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2019",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "B",
        },
        "date": "2019",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "4-2019-B",
        "__Dim_Color__": "4-2019-B",
        "__Dim_Detail__": "4-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2019",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "B",
        },
        "date": "2019",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "5-2019-B",
        "__Dim_Color__": "5-2019-B",
        "__Dim_Detail__": "5-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2019",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "B",
        },
        "date": "2019",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "6-2019-B",
        "__Dim_Color__": "6-2019-B",
        "__Dim_Detail__": "6-2019-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2019",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "B",
        },
        "date": "2019",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "1-2020-A",
        "__Dim_Color__": "1-2020-A",
        "__Dim_Detail__": "1-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "A",
        },
        "date": "2020",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2-2020-A",
        "__Dim_Color__": "2-2020-A",
        "__Dim_Detail__": "2-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2020",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "A",
        },
        "date": "2020",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "3-2020-A",
        "__Dim_Color__": "3-2020-A",
        "__Dim_Detail__": "3-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2020",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "A",
        },
        "date": "2020",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "4-2020-A",
        "__Dim_Color__": "4-2020-A",
        "__Dim_Detail__": "4-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2020",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "A",
        },
        "date": "2020",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "5-2020-A",
        "__Dim_Color__": "5-2020-A",
        "__Dim_Detail__": "5-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2020",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "A",
        },
        "date": "2020",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "6-2020-A",
        "__Dim_Color__": "6-2020-A",
        "__Dim_Detail__": "6-2020-A",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "A",
        },
        "date": "2020",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "1-2020-B",
        "__Dim_Color__": "1-2020-B",
        "__Dim_Detail__": "1-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 200000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "1",
          "profit": 10000,
          "sales": 200000,
          "type": "B",
        },
        "date": "2020",
        "month": "1",
        "profit": 10000,
        "sales": 200000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "2-2020-B",
        "__Dim_Color__": "2-2020-B",
        "__Dim_Detail__": "2-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 400000,
        "__MeaYValue__0": 20000,
        "__OriginalData__": {
          "date": "2020",
          "month": "2",
          "profit": 20000,
          "sales": 400000,
          "type": "B",
        },
        "date": "2020",
        "month": "2",
        "profit": 20000,
        "sales": 400000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "3-2020-B",
        "__Dim_Color__": "3-2020-B",
        "__Dim_Detail__": "3-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 600000,
        "__MeaYValue__0": 30000,
        "__OriginalData__": {
          "date": "2020",
          "month": "3",
          "profit": 30000,
          "sales": 600000,
          "type": "B",
        },
        "date": "2020",
        "month": "3",
        "profit": 30000,
        "sales": 600000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "4-2020-B",
        "__Dim_Color__": "4-2020-B",
        "__Dim_Detail__": "4-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 800000,
        "__MeaYValue__0": 40000,
        "__OriginalData__": {
          "date": "2020",
          "month": "4",
          "profit": 40000,
          "sales": 800000,
          "type": "B",
        },
        "date": "2020",
        "month": "4",
        "profit": 40000,
        "sales": 800000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "5-2020-B",
        "__Dim_Color__": "5-2020-B",
        "__Dim_Detail__": "5-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 1000000,
        "__MeaYValue__0": 50000,
        "__OriginalData__": {
          "date": "2020",
          "month": "5",
          "profit": 50000,
          "sales": 1000000,
          "type": "B",
        },
        "date": "2020",
        "month": "5",
        "profit": 50000,
        "sales": 1000000,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "6-2020-B",
        "__Dim_Color__": "6-2020-B",
        "__Dim_Detail__": "6-2020-B",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaXValue__0": 300000,
        "__MeaYValue__0": 10000,
        "__OriginalData__": {
          "date": "2020",
          "month": "6",
          "profit": 10000,
          "sales": 300000,
          "type": "B",
        },
        "date": "2020",
        "month": "6",
        "profit": 10000,
        "sales": 300000,
        "type": "B",
      },
    ],
  },
  "rows": [
    {
      "dimensionKey": "type",
      "title": "类型",
    },
  ],
  "theme": {
    "bodyStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        2,
        0,
      ],
      "hover": {
        "cellBgColor": "transparent",
      },
      "padding": [
        0,
        0,
        1,
        0,
      ],
    },
    "bottomFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        0,
        0,
      ],
      "color": "#333333",
      "fontSize": 12,
      "fontWeight": "bold",
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "cornerLeftBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightTopCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "frameStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderLineWidth": 0,
    },
    "headerStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "rightFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "rowHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "selectionStyle": {
      "cellBgColor": "",
      "cellBorderColor": "",
    },
    "underlayBackgroundColor": "rgba(0,0,0,0)",
  },
  "widthMode": "adaptive",
}
`;
